# BJSS_Internship

./: README.md
Final Demo/: aboutfinal.sql  database.sql
Final Demo/Function App/: requirements.txt
Final Demo/Function App/EmployeeAPI/: __init__.py
Final Demo/frontend/: package-lock.json  package.json
Final Demo/frontend/src/: App.js
Final Demo/frontend/src/components/: CallAccelerator.js  Chatwindow.js  Empdisplay.js  Messages.js  Quickreplies.js
Final Demo/frontend/src/styles/: App.css  Chatwindow.css  Employee.css
Itunes API Demo/: package-lock.json  package.json
Itunes API Demo/src/: App.css  App.js  index.css
Lunch and Learn Demo/: Dockerfile  benchStatus.sql
Lunch and Learn Demo/Flask Function Prototpye/: pyproject.toml
Lunch and Learn Demo/Flask Function Prototpye/flask_app/: function.py
Lunch and Learn Demo/Flask Function Prototpye/tests/: flask_test.py
Lunch and Learn Demo/flask-demo/: pyproject.toml
Lunch and Learn Demo/flask-demo/flask_demo/: app.py
Lunch and Learn Demo/function-app/laldemo/: __init__.py
Technology Exploration/Poetry/flask-demo/: pyproject.toml
Technology Exploration/Poetry/flask-demo/flask_demo/: app.py
Technology Exploration/Pytest/: myfunctions.py  test_functions.py
Technology Exploration/tic-tac-toe/src/: index.js
