[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Zachary Elgin <zachary.elgin@bjss.com>"]
readme = "README.md"
packages = [{include = "flask_app"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
psycopg2 = "^2.9.5"
pyodbc = "^4.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
