[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Zachary Elgin <zachary.elgin@bjss.com>"]
readme = "README.md"
packages = [{include = "flask_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
